feat: 추가 기능 구현 및 테스트 작성